criando o arquivo available

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <img src="./dist/images/logos/disney_star_plus_starzplay_underline.png" alt="Disney+">
                 <strong class="title--small">R$ 55,90/mês*</strong>
                 <p class="text">
-                   Disney+, Star+ e STARZPLAY em um plano especial. Assine agora os três serviços juntos.
+                    Disney+, Star+ e STARZPLAY em um plano especial. Assine agora os três serviços juntos.
                 </p>
                 <button class="button">Assine agora</button>
             </li>
@@ -146,6 +146,71 @@
             *o preço pode variar caso a assintura seja feita através de outras plataformas.
         </p>
     </section>
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Imagem com TV, Computador, Tablet e celular">
+        <div class="image-text-section__text_container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos.
+                Nossa seleção de títulos em 4K não para de crescer. Além disso, para a felicidade de todos, é possivel
+                assistir em até 4 telas ao mesmo tempo.
+            </p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+    <img src="./dist/images/fundo_rei_leao.png" alt="Imagem do Rei Leão">
+    <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+        <h2 class="title">Baixe filmes e séries</h2>
+        <p class="text--big">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+    </div>
+</section>
+<section class="available-devices">
+    <h2 class="title">Disponínvel nos seus dispositivos favoritos</h2>
+    <ul class="available-devices__list">
+        <li class="available-devices__list__item">
+            <img src="./dist/images/dispositivos/computador.png" alt="Computador">
+            <h4 class="title--small">Computador</h4>
+            <ul class="text">
+                <li>Chrone OS</li>
+                <li>MacOS</li>
+                <li>PC Windows</li>
+            </ul>
+        </li>
+        <li class="available-devices__list__item">
+            <img src="./dist/images/dispositivos/tv.png" alt="Tv">
+            <h4 class="title--small">TV</h4>
+            <ul class="text">
+                <li>Amazon Fire TV</li>
+                <li>Android Tv</li>
+                <li>Apple TV</li>
+                <li>Chromecast</li>
+                <li>TVs LG</li>
+                <li>Roku</li>
+                <li>Samsung</li>
+            </ul>
+        </li>
+        <li class="available-devices__list__item">
+            <img src="./dist/images/dispositivos/videogames.png" alt="videogames">
+            <h4 class="title--small">videogames</h4>
+            <ul class="text">
+                <li>PS4</li>
+                <li>PS5</li>
+                <li>Xbox One</li>
+                <li>Xbox Series X</li>
+                <li>Xbox Series S</li>
+            </ul>
+        </li>
+        <li class="available-devices__list__item">
+            <img src="./dist/images/dispositivos/celular.png" alt="Celulares de tablets">
+            <h4 class="title--small"></h4>
+            <ul class="text">
+                <li>Tablets Amazon Fire</li>
+                <li>Celulares e Tablets Android</li>
+                <li>iPhone e iPad</li>
+            </ul>
+        </li>
+    </ul>
+</section>
     <script src="./src/main.js"></script>
 </body>
+
 </html>
