--- a/index.html
+++ b/index.html
@@ -157,59 +157,125 @@
         </div>
     </section>
     <section class="image-text-section image-text-section--image-full-width">
-    <img src="./dist/images/fundo_rei_leao.png" alt="Imagem do Rei Leão">
-    <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
-        <h2 class="title">Baixe filmes e séries</h2>
-        <p class="text--big">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
-    </div>
-</section>
-<section class="available-devices">
-    <h2 class="title">Disponínvel nos seus dispositivos favoritos</h2>
-    <ul class="available-devices__list">
-        <li class="available-devices__list__item">
-            <img src="./dist/images/dispositivos/computador.png" alt="Computador">
-            <h4 class="title--small">Computador</h4>
-            <ul class="text">
-                <li>Chrone OS</li>
-                <li>MacOS</li>
-                <li>PC Windows</li>
-            </ul>
-        </li>
-        <li class="available-devices__list__item">
-            <img src="./dist/images/dispositivos/tv.png" alt="Tv">
-            <h4 class="title--small">TV</h4>
-            <ul class="text">
-                <li>Amazon Fire TV</li>
-                <li>Android Tv</li>
-                <li>Apple TV</li>
-                <li>Chromecast</li>
-                <li>TVs LG</li>
-                <li>Roku</li>
-                <li>Samsung</li>
-            </ul>
-        </li>
-        <li class="available-devices__list__item">
-            <img src="./dist/images/dispositivos/videogames.png" alt="videogames">
-            <h4 class="title--small">videogames</h4>
-            <ul class="text">
-                <li>PS4</li>
-                <li>PS5</li>
-                <li>Xbox One</li>
-                <li>Xbox Series X</li>
-                <li>Xbox Series S</li>
-            </ul>
-        </li>
-        <li class="available-devices__list__item">
-            <img src="./dist/images/dispositivos/celular.png" alt="Celulares de tablets">
-            <h4 class="title--small"></h4>
-            <ul class="text">
-                <li>Tablets Amazon Fire</li>
-                <li>Celulares e Tablets Android</li>
-                <li>iPhone e iPad</li>
-            </ul>
-        </li>
-    </ul>
-</section>
+        <img src="./dist/images/fundo_rei_leao.png" alt="Imagem do Rei Leão">
+        <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+            <h2 class="title">Baixe filmes e séries</h2>
+            <p class="text--big">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até
+                mesmo sem internet.
+        </div>
+    </section>
+    <section class="available-devices">
+        <h2 class="title">Disponínvel nos seus dispositivos favoritos</h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/computador.png" alt="Computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Chrone OS</li>
+                    <li>MacOS</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="Tv">
+                <h4 class="title--small">TV</h4>
+                <ul class="text">
+                    <li>Amazon Fire TV</li>
+                    <li>Android Tv</li>
+                    <li>Apple TV</li>
+                    <li>Chromecast</li>
+                    <li>TVs LG</li>
+                    <li>Roku</li>
+                    <li>Samsung</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="videogames">
+                <h4 class="title--small">videogames</h4>
+                <ul class="text">
+                    <li>PS4</li>
+                    <li>PS5</li>
+                    <li>Xbox One</li>
+                    <li>Xbox Series X</li>
+                    <li>Xbox Series S</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="Celulares de tablets">
+                <h4 class="title--small"></h4>
+                <ul class="text">
+                    <li>Tablets Amazon Fire</li>
+                    <li>Celulares e Tablets Android</li>
+                    <li>iPhone e iPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section class="faq">
+        <h2 class="title">Perguntas freguentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    O Disney+ oferece:
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p>Experiência premiun sem intervalo comenrciais.</p>
+                    <p>As melhores histórias da Dinsey, Pixar, Marvel, Star
+                        Wars e National Geographic, tudo em um só lugar.</p>
+                    <p>Downloads ilimitados em até 10 dispositivos compatíveis.</p>
+                    <p>Mais de 300 títulos em 4K UHD e HDR.</p>
+                    <p>A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo
+                        adicional.</p>
+                    <p>IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o
+                        Disney+.</p>
+                </div>
+            </li>
+            <li class="faq__questions__item ">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Ao assinar o Combo+:
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    <p>O valor da sua assinatura existente (anual ou mensal) será descontado do preço do Combo+.</p>
+                    <p>Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do
+                        Combo+..</p>
+                    <p>Se você assina o plano anual, dividiremos o valor que você já pagou em 12 vezes e descontaremos
+                        esse valor do preço do Combo+ mensalmente.</p>
+                    <p>Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento.</p>
+                    <p>Lembre-se: você pode cancelar a assinatura quando quiser.</p>
+                </div>
+                <p class="faq__questions__item__answer text--big">No momento, apenas a assinatura mensal do Combo+ está
+                    disponível.</p>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Quais formas de pagamento posso utilizar?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas
+                    parceiras como Google Play Store, App Store da Apple; Mercado Livre e provedores locais de TV,
+                    telefonia e internet.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Como posso ver o conteúdo com classificação indicativa até 16 e 18 anos?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18,
+                    todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental
+                    do perfil. É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os
+                    usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a
+                    classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
+                </div>
+            </li>
+        </ul>
+    </section>
     <script src="./src/main.js"></script>
 </body>
 
